--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "sanitize.css": "8.0.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "uglifyjs-webpack-plugin": "2.0.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.26.0",
     "webpack-cli": "3.1.2",
     "webpack-dev-middleware": "3.4.0",
@@ -99,7 +99,7 @@
     "express": "4.16.4",
     "fast-safe-stringify": "2.0.6",
     "file-loader": "^3.0.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "neo4j-driver": "^1.7.2",
